--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "download": "node download.js",
+    "check-srt": "node check.js"
+  },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "yargs": "^17.5.1"
   }
 }
